--- a/data/blogs/2.md
+++ b/data/blogs/2.md
@@ -1,7 +1,7 @@
 ​
         最近自己在做一个纯前端的的博客，需要将markdown的文件博客内容展示到页面，本文记录如何读取文件内容并将内容转为html展示。
 
-## 1.借助webpack的remark-loader解析文件
+## 1.借助webpack的remark-loader解析文件,其它loader亦可以（markdown-loader等）
 webpack配置如下：
 ```
 module.exports = {
@@ -81,6 +81,10 @@ function BlogDetail (props:any) {
 }
 ```
 export default BlogDetail;
+
+## 4.实践问题
+### 4.1 umi中通过webpackChain使用时需要关闭webpack5,否则loader会报错：this.getOptions is not a function
+### 4.2 不一定非得使用loader处理md文件，也可以使用marked等三方库处理转换
 
 完成。。。。。。。。。
 
