开发配置ixiugai，navlink替换为a标签

--- a/data/blogs/3.md
+++ b/data/blogs/3.md
@@ -1,5 +1,5 @@
 # umi实践问题集锦
-
+    本文主要记录在项目实践过程中的一些特定场景问题，仅供参考：
 ## 1.webpackChain自定义loader报错：this.getOptions is not a function
 
 **场景：**
@@ -30,5 +30,25 @@ export default {
 }
 ```
 
-## 2.umi-ui(@umijs/preset-ui插件)只能在csr下使用，ssr下用不了
+## 2.SSR(服务端渲染)下不支持mfsu、@umijs/preset-ui(区块)
+
+## 3.SSR(服务端渲染)在第一次请求后，点击导航菜单，路由发生切换跳转新的页面并未向服务器发起请求获取新的页面，而是本地做的页面重新渲染。
+**解决：**
+将NavLink组件替换为a标签
+
+## 4.SSR(服务端渲染)请求服务器Css和js文件，返回的是html内容。
+**解决：**
+如果配置了hash:true,关闭打包文件的hash功能即可,因为umi.server.js里面对js和css的引用地址没有加hash，比如你打包出来的文件名是umi.adsjsnd.css,但是umi.server.js对css的引用文件名是umi.css,所以访问不到对应的资源，返回的都是html。修改配置config.js或.umirc.js：
+```
+export default {
+    ...
+    hash:false
+    ...
+}
+```
+ 如果没配置hash:true,参考这个issues:https://github.com/umijs/umi/issues/4808
+
+ ## 5.开启mfsu:{}报错：1. Can't read property 'ModuleFederationPlugin' of undefined.
+ **解决：**
+ 请确认 mfsu:{} 被添加到 config.ts 而不是 config.dev.ts 或者 config.prod.ts。
 
