--- a/data/blogs/3.md
+++ b/data/blogs/3.md
@@ -1,5 +1,12 @@
 # umi实践问题集锦
-    本文主要记录在项目实践过程中的一些特定场景问题，仅供参考：
+
+开发环境：
+umi: 3.5.18
+node: v14.15.1
+系统： windows
+
+本文主要记录在项目实践过程中的一些特定场景问题，仅供参考：
+
 ## 1.webpackChain自定义loader报错：this.getOptions is not a function
 
 **场景：**
