--- a/data/blogs/2.md
+++ b/data/blogs/2.md
@@ -1,5 +1,6 @@
-​
-        最近自己在做一个纯前端的的博客，需要将markdown的文件博客内容展示到页面，本文记录如何读取文件内容并将内容转为html展示。
+# react中实现markdown文件读取展示
+
+     最近自己在做一个纯前端的的博客，需要将markdown的文件博客内容展示到页面，本文记录如何读取文件内容并将内容转为html展示。
 
 ## 1.借助webpack的remark-loader解析文件,其它loader亦可以（markdown-loader等）
 webpack配置如下：
