--- a/data/blogs/5.md
+++ b/data/blogs/5.md
@@ -1,17 +1,29 @@
 # NodeJs发起https请求报错:certificate has expired
 
-在Node开发项目过程中，我们很有可能需要请求外部地址，以此调用外部功能接口或拉取外部数据。通常我们会使用https来保证通信过程安全，这里当我们用NodeJs发起https请求时却提示：certificate has expired错误，但是通过postman工具测试请求地址没有问题，证书也没有过期。查询相关资料发现，原因是证书认证没通过。
+在Node开发项目过程中，我们很有可能需要请求外部地址，以此调用外部功能接口或拉取外部数据。通常我们会使用https来保证通信过程安全，这里当我们用NodeJs发起https请求时却提示：certificate has expired错误。
 
 ## 如何解决
-1.简单粗暴的方式,仅限开发环境使用,将下面的代码添加到你的文件顶部：
+1.简单粗暴的方式,设置环境变量,将下面的代码添加到你的文件顶部：
 
 `process.env.NODE_TLS_REJECT_UNAUTHORIZED = '0';`
 
-**注意：这种方式是有问题的,它会禁用node进行HTTPS / SSL / TLS检查。**
+**注意：这种方式是有问题的,会让NodeJs不拒绝未认证的证书**
 
-2.设置请求options的**rejectUnauthorized**为**false**,证书不符合也不拒绝连接
+2.设置请求options的**rejectUnauthorized**为**false**,忽略证书安全
 ```
   http.request(path,{
     rejectUnauthorized:false
   })
+```
+3.导出你的证书文件（XXX.key和XXX.pem）发起请请求时指定使用请求目标地址的证书：
+```
+let express = require("express");
+let https = require("https");
+let fs = require("fs");
+// 配置
+const httpsOption = {
+    key : fs.readFileSync("./path/XXX.key"),
+    cert: fs.readFileSync("./path/XXX.pem")
+}
+https.createServer(httpsOption, app).listen(443);
 ```
