--- a/data/blogs/7.md
+++ b/data/blogs/7.md
@@ -20,4 +20,35 @@ SEO是“Search Engine Optimization”（搜索引擎优化）的缩写，是一
 
 
 ## SEO有什么用
-采用易于被搜索引用的手段，对网站进行有针对性的优化，提高网站在搜索引擎中的自然排名，吸引更多的用户访问网站，提高网站的访问量，提高网站的销售能力和宣传能力，从而提升网站的品牌效应。
+采用易于被搜索引用的手段，对网站进行有针对性的优化，提高网站在搜索引擎中的自然排名，吸引更多的用户访问网站，提高网站的访问量。直接点说就是获取搜索引擎免费流量，降低推广成本。
+
+## 白帽SEO（正规）
+
+通常大家说的也就是通过正规的遵守搜索引擎优化指南进行的SEO技术手段，是一种公正的手法，是使用符合主流搜索引擎发行方针规定的seo优化方法，遵守搜索引擎规则标准，通过对创造原创内容，以用户为中心，合理修改网站的内容、标签、目录、文件结构、制作标准静态页面等，优化网站整体构造，以用户体验为中心，提高网站权重，提升网站整体排名。
+
+白帽SEO一直被业内认为是最佳的seo手法，它是在避免一切风险的情况下进行操作的，同时也避免了与搜索引擎发行方针发生任何的冲突，它也是SEO从业者的最高职业道德标准。
+
+## 黑帽SEO（不可取）
+
+黑帽seo就是作弊的意思，通过作弊的手段蒙蔽搜索引擎获得的排名，黑帽seo手法不符合主流搜索引擎发行方针规定。黑帽SEO获利主要的特点就是短平快，为了短期内的利益而采用的作弊方法。同时随时因为搜索引擎算法的改变而面临惩罚。
+
+通过欺骗搜索引擎的排名规则，利用不良作弊手段如跳转页、桥页、网页定向、网页劫持、关键词堆积、隐藏链接、链接工厂、群发软件等等欺骗搜索引擎手 段及搜索用户，取得短期搜索引擎排名，损害网站收录规则，不益于网站长期发展，引起域名被K，严重者导致域名主机被搜索引擎禁止抓取。
+
+黑帽SEO不同于白帽seo那种放长线钓大鱼的策略。黑帽seo更注重的是短期内的利益，在利益的驱使下通过作弊手法获得很大的利益。鄙视黑帽SEO，黑帽SEO人员为行业败类，坑害客户！
+
+## 灰帽SEO（先黑后白）
+
+稍微有点黑，稍微有点白，活动于黑帽与白帽之间。也可以说是打擦边球，运气好就好，运气不好就等着被K，SEO灰帽前期部分采用黑帽的方法，快速提高网站排名，排名上来后，转为白帽，后期采用符合搜索引擎规则优化手法，提升网站排名。
+
+## 绿帽SEO
+
+绿帽SEO和传统理解中的白帽SEO和黑帽SEO的定义都大不相同，绿帽SEO既不热衷于传统白帽SEO的内外链接的建立也不热衷于黑帽SEO的各种取巧手段，创造有价值的信息是绿帽SEO的前提条件。
+
+绿帽SEO的特征:
+
+1、他们热衷于互联网价值的创造，抵制垃圾资讯的产生和泛滥；
+2、他们往往是一些最新观点的发起者或传统理念的挑战者；
+3、他们一切以为用户创造价值为基础，很少针对某一个搜索引擎做专门的调整或迎合；
+4、他们即使是以营销为目的，也要进行大量的调研，务必追求有新的有价值的资讯产生；
+5、他们也是把SEO作为一份工作，而不是单纯的兴趣爱好；
+6、他们热衷于品牌的创造，而非低劣的山寨。
