--- a/data/blogs/7.md
+++ b/data/blogs/7.md
@@ -20,7 +20,7 @@ SEO是“Search Engine Optimization”（搜索引擎优化）的缩写，是一
 
 
 ## SEO有什么用
-采用易于被搜索引用的手段，对网站进行有针对性的优化，提高网站在搜索引擎中的自然排名，吸引更多的用户访问网站，提高网站的访问量。直接点说就是获取搜索引擎免费流量，降低推广成本。
+直接点说就是获取搜索引擎免费流量，降低推广成本。采用易于被搜索引用的手段，对网站进行有针对性的优化，提高网站在搜索引擎中的自然排名，吸引更多的用户访问网站，提高网站的访问量。
 
 ## 白帽SEO（正规）
 
@@ -32,13 +32,13 @@ SEO是“Search Engine Optimization”（搜索引擎优化）的缩写，是一
 
 黑帽seo就是作弊的意思，通过作弊的手段蒙蔽搜索引擎获得的排名，黑帽seo手法不符合主流搜索引擎发行方针规定。黑帽SEO获利主要的特点就是短平快，为了短期内的利益而采用的作弊方法。同时随时因为搜索引擎算法的改变而面临惩罚。
 
-通过欺骗搜索引擎的排名规则，利用不良作弊手段如跳转页、桥页、网页定向、网页劫持、关键词堆积、隐藏链接、链接工厂、群发软件等等欺骗搜索引擎手 段及搜索用户，取得短期搜索引擎排名，损害网站收录规则，不益于网站长期发展，引起域名被K，严重者导致域名主机被搜索引擎禁止抓取。
+通过欺骗搜索引擎的排名规则，利用不良作弊手段如跳转页、桥页、网页定向、网页劫持、关键词堆积、隐藏链接、链接工厂、群发软件等等，欺骗搜索引擎和搜索用户，获得短期的搜索排名，不遵守收录规则，有害网站长期发展，引起域名被K，严重的会导致域名主机被搜索引擎列入黑名单，禁止抓取。
 
-黑帽SEO不同于白帽seo那种放长线钓大鱼的策略。黑帽seo更注重的是短期内的利益，在利益的驱使下通过作弊手法获得很大的利益。鄙视黑帽SEO，黑帽SEO人员为行业败类，坑害客户！
+黑帽不同于白帽那种细水长流的策略。黑帽注重的是短期利益，通过作弊手法获得大量流量。
 
 ## 灰帽SEO（先黑后白）
 
-稍微有点黑，稍微有点白，活动于黑帽与白帽之间。也可以说是打擦边球，运气好就好，运气不好就等着被K，SEO灰帽前期部分采用黑帽的方法，快速提高网站排名，排名上来后，转为白帽，后期采用符合搜索引擎规则优化手法，提升网站排名。
+黑但又不完全黑，白也不完全白，介于黑帽与白帽之间。可以说是打擦边球，运气好就好，运气不好就被K，SEO灰帽前期部分采用黑帽的方法，快速提高网站排名，排名上来后，转为白帽，后期采用符合搜索引擎规则优化手法，提升网站排名。
 
 ## 绿帽SEO
 
