--- a/data/softwares/1.md
+++ b/data/softwares/1.md
@@ -1,5 +1,10 @@
 # 火车头采集器破解版下载
 
-## 火车头采集器V9.0
+火车头采集器是一款网页数据采集工具，可使用原先需要付费的企业版的所有功能。火车头采集器能够快速的对网页上数据信息进行规范性的采集，包括文本、图片、文件等信息。能够采集那些需要登陆才能查看的内容信息，能够解析文件真实地址并且下载。支持采集数据直接入库和模仿手工发布等许多功能特点。 
 
-## 火车头采集器V7.6
+### 使用说明
+火车头采集器破解版为绿色免安装版本，下载解压后运行文件夹内的LocoyPlatform.exe程序就可打开使用本软件，无需用户再去安装破解。 
+
+### 下载地址
+火车头采集器V9链接: https://pan.baidu.com/s/1Nwr8fDIpbp2KQku2Azs4UA 提取码: mwk2
+火车头采集器V7.6链接: https://pan.baidu.com/s/1KNUkdyRO3MI81i6AawVtVw 提取码: 2nge 
