--- a/data/softwares/1000.md
+++ b/data/softwares/1000.md
@@ -1,1 +1,8 @@
-# apkpure下载
+# apkpure
+
+海外正版APP下载，历史版本APP查询下载，使用APKPure APK下载器下载官方正版应用.无需绑定账户，海量历史版本应用，极速下载更新。
+
+## 下载地址
+官网：https://apkpure.com/cn/ 
+
+**注：访问需翻墙**
