--- a/data/blogs/14.md
+++ b/data/blogs/14.md
@@ -4,7 +4,7 @@
 
 ## 什么是快速排名
 
-这时我自己的理解：快速排名主要是指在相对较短的时间周期内，针对网站的关键词，快速提升搜索引擎排名的一个过程。
+这是我自己的理解：快速排名主要是指在相对较短的时间周期内，针对网站的关键词，快速提升搜索引擎排名的一个过程。
 
 ## 如何快速排名
 
