--- a/data/blogs/16.md
+++ b/data/blogs/16.md
@@ -1,6 +1,6 @@
 # 浏览器中的js事件循环（Event loop）和node事件循环（Event loop）
 
-本文将简述浏览器中的js事件循环和node事件循环的机制，对比二者不同支出，帮助我们理解不同环境代码是如何运行的。
+本文将简述浏览器中的js事件循环机制，帮助我们理解浏览器环境js代码是如何运行的。
 
 Javascript的一大特点是单线程，也就意味着同一时间他只能做一件事。事件循环（Event Loop）是为了协调事件，用户交互，UI渲染，网络处理等行为，防止线程阻塞而诞生的。
 
@@ -66,31 +66,3 @@ setTimeout(()=>{
 ③ 在执行宏任务setTimeout 2时会生成微任务Promise 2 ，放入微任务队列中，接着先去清空微任务队列中的所有任务，输出 Promise 2。 
 
 ④ 清空完微任务队列中的所有任务后，就又会去宏任务队列取一个，这回执行的是 setTimeout 1。
-
-## node事件循环 
-
-### 1.node运行机制 
-
-node使用V8作为js解析引擎，I/O处理使用了自己设计的libuv,libuv是一个基于事件的跨平台抽象层，封装了不同操作系统一些底层特性，对外提供统一的API,事件循环机制也是它里面的实现。
-
-运行机制： 
-
-① V8引擎解析JavaScript脚本。 
-
-② 解析后的代码，调用Node API。 
-
-③ libuv库负责Node API的执行。它将不同的任务分配给不同的线程，形成一个Event Loop（事件循环），以异步的方式将任务的执行结果返回给V8引擎。 
-
-④ V8引擎再将结果返回给用户。 
-
-### 2.事件循环
-
-libuv引擎中的事件循环分为 6 个阶段，按照顺序反复运行。每当进入新阶段的时候，都会从对应的回调队列中取出函数去执行。当队列为空或者执行的回调数量到达系统设定的阈值，就会进入下一阶段。
-
-流程如下： 
-
-![node 事件循环](/static/images/node_event_loop.jpg) 
-
-## 二者的区别
-
-## 总结
