--- a/data/blogs/19.md
+++ b/data/blogs/19.md
@@ -1,28 +1,31 @@
-# React中useEffect回调中状态值不更新问题
+# 2021年中国开发者755万全球第二，Javascript最受欢迎您，数据来源：GitHub
 
-先来看个例子:
+2021年11月17 日，GitHub发布2021年度报告：全球GitHub开发者用户超过7300万 ，其中 56.8% 来自北美之外的地区。美国开发者最多，共有1355万，中国开发者占 10%，有 755 万，位居全球第二。
 
-```
+![Github 开发者](/static/images/14.png) 
 
-const Demo = ()=>{
-  const [count,setCount] = useState(0);
-  useEffect(()=>{
-    setInterval(()=>{
-      console.log(count);
-      setCount(count+1);
-    }, 1000)
-  },[])
-}
+在过去的一年中，全球开发者数量增长迅猛，共有 1600 万新开发者加入了 GitHub 社区。
 
-``` 
+数据显示，JavaScript依然是GitHub上最受欢迎的编程语言，Python是第二受欢迎的语言，其次是Java和快速增长的TypeScript。
 
-上面代码每秒打印的count值是多少。
+TypeScript 已经从2018年和2019年的第七位攀升到今年的第四位。PHP 和 Ruby 这两种五年前最受欢迎的语言的受欢迎程度继续下降。
 
-答案： 始终为0；
 
-useEffect内部缓存组件的状态值count,无论外部的count如何变化，都不会影响useEffect内部，所以此处count打印始终为0。
+![Github 编程语言](/static/images/15.png) 
 
-修正方法：count添加到useEffect的依赖当中，useEffect在组件状态count变化后会重新执行初始化，已更新内部状态值，不添加count依赖就不会更新，以此保证每次在effect内部始终保持最新的count值。
+开源项目的首次贡献者数量也是在逐年增长，相较于 2020 年，今年增加了 213,319 名首次开源项目贡献者。
 
-## 简易useEffect实现
 
+![Github 开源项目](/static/images/16.png) 
+
+## 人们通常在 GitHub 上的第一个小时会做什么？ 
+
+192,830人创建议题，16,102人发起PR等待别人合入自己的代码, 24,404将自己代码推到原作者的仓，60,854人就议题做出回应...
+
+大型存储库通常会使用 Good First Issue 标签，因为这是一种非常有效的做法。
+
+数据显示，当21%-30%的问题被标记为 Good First Issues 的存储库时，就会平均有 13% 的新贡献者。
+
+有超过 40% 的 Good First Issues 标注就可以帮助项目吸引 21% 以上的新贡献者。
+
+**参考资料：<a href="https://octoverse.github.com/" rel="nofollow" >https://octoverse.github.com/</a>**
