--- a/data/blogs/22.md
+++ b/data/blogs/22.md
@@ -33,7 +33,7 @@ console.log('hello world');
 
 执行 npm link 命令。这样我们就可以全局使用 mycli 命令了。
 
-一个基本的cli架子就搭建好了。
+一个基本的cli架子就搭建好了。具体的功能代码根据自己的需要填充进cli工具就行。
 
 ## cli 发布
 
@@ -41,6 +41,8 @@ console.log('hello world');
   npm publish
   
 ```
+
+
 
 
 ## 命令行辅助工具库
