--- a/data/blogs/23.md
+++ b/data/blogs/23.md
@@ -1,8 +1,8 @@
-# husky add hook命令不起作用问题
+# husky7 add hook命令不起作用问题
 
 ## 背景
 
-开发环境：git v2.22 + node v14.17.5 + npm v6.6.14 + win10 + husky v7.0.4 
+开发环境：git 2.20.1.windows.1 + node v14.15.1 + npm v6.14.8 + win10 + husky v7.0.4 
 
 项目需要配置git hook，在commit之前执行代码校验ESLint，规范commit提交日志格式。我们使用husky来配置git hook.
 
