--- a/data/blogs/2.md
+++ b/data/blogs/2.md
@@ -89,4 +89,6 @@ export default BlogDetail;
 
 完成。。。。。。。。。
 
+
+**markdown与JSX混合使用参考：<a href="https://qianduan.shop/blogs/detail/25" target="_blank">使用 MDX 在 md 文件中解析React组件</a>**
 ​
