--- a/data/blogs/28.md
+++ b/data/blogs/28.md
@@ -6,4 +6,12 @@
 -->
 # EBS 与 SSD 的区别
 
-## 
+最近又开始使用 AWS 的 EC2,在选取 EC2 配置的时候磁盘有两种选择：EBS 和 SSD。由于对二者的定义有些不太了解，不知道如何选择，特意去了解了一下，一次记录
+
+## EBS 
+
+EBS更灵活，能够与 EC2 实例分离，可以附加到不同的实例，相比 SSD 它的速度就要慢一些，所以EBS 相比较而言更通用一些。
+
+## SSD
+
+SSD 速度更快，但是不能与实例分离，实例终止时 SSD也会被删除，
