--- a/data/blogs/28.md
+++ b/data/blogs/28.md
@@ -4,14 +4,61 @@
  * @LastEditTime: 2021-12-08 15:13:56
  * @FilePath: \qianduan.shop\data\blogs\28.md
 -->
-# EBS 与 SSD 的区别
+# AWS EC2 如何扩展 EBS 磁盘
 
-最近又开始使用 AWS 的 EC2,在选取 EC2 配置的时候磁盘有两种选择：EBS 和 SSD。由于对二者的定义有些不太了解，不知道如何选择，特意去了解了一下，一次记录
+最近又开始使用 AWS 的 EC2,在选取 EC2 配置的时候磁盘配置大小默认选用的最小的 8G ,后期大小不够用了就需要扩展磁盘大小。
 
-## EBS 
+## 1.在原有磁盘的基础上扩展
 
-EBS更灵活，能够与 EC2 实例分离，可以附加到不同的实例，相比 SSD 它的速度就要慢一些，所以EBS 相比较而言更通用一些。
+① 在 web 控制台找到要处理的 EC2 机器的 EBS 磁盘，根据实际需要修改 EBS 磁盘的 大小, IOPS 和吞吐量，这个比较简单，不细说，都是管理后台的界面操作。
 
-## SSD
+② ssh 远程登录 EC2。
 
-SSD 速度更快，但是不能与实例分离，实例终止时 SSD也会被删除，
+③ 查看当前的磁盘文件系统大小：
+
+```
+[ec2-user ~]$ df -hT
+Filesystem    Type  Size  Used  Avail Use% Mounted on
+/dev/xvda1     xfs   8G   1.5G   6.5G  16%  /
+... //省略其他
+```
+
+④ 使用 lsblk 命令显示有关附加到 EC2 实例的 xvda 块储存设备的信息。
+
+```
+[ec2-user ~]$ lsblk
+NAME    MAJ:MIN RM SIZE RO TYPE MOUNTPOINT
+xvda    202:0    0  16G  0 disk 
+└─xvda1 202:1    0  8G  0 part /
+
+```
+
+这个例子输出显示以下内容：
+
+根卷 /dev/xvda 具有一个分区 /dev/xvda1。根卷大小为大小 16 GB，分区的大小为大小 8 GB，可以对分区进行扩展。
+
+⑤ 使用 growpart 命令扩展分区，注意设备名称（/dev/xvda1）和分区编号（1）之间有空格。
+
+```
+[ec2-user ~]$ sudo growpart /dev/xvda1 1
+
+```
+
+⑥ 在此使用 lsblk 命名验证扩展结果 
+
+```
+[ec2-user ~]$ lsblk
+NAME    MAJ:MIN RM SIZE RO TYPE MOUNTPOINT
+xvda    202:0    0  16G  0 disk 
+└─xvda1 202:1    0  16G  0 part /
+
+```
+
+⑦ 使用 df -h 命令使用 df -h 命令验证文件系统的大小，扩展 ESB 完成。
+
+```
+[ec2-user ~]$ df -hT
+Filesystem    Type  Size  Used  Avail Use% Mounted on
+/dev/xvda1     xfs   16G   1.5G   14.5G  10%  /
+... //省略其他
+```
