去掉文章热门排行

--- a/data/blogs/30.md
+++ b/data/blogs/30.md
@@ -8,7 +8,7 @@
 
 官方文档：<a href="https://doris.apache.org/master/zh-CN/installing/compilation.html#%E7%9B%B4%E6%8E%A5%E7%BC%96%E8%AF%91-centos-ubuntu" target="_blank" rel="nofollow">直接编译-centos-ubuntu</a>
 
-我实在 AWS 上的 EC2,进行的部署，本文主要记录**按官方文档操作直接编译**过程中遇到的问题，方便查询。
+我是在 AWS 上的 EC2 进行的部署，本文主要记录**按官方文档操作直接编译**过程中遇到的问题，方便查询。
 
 ## 1. EC2 实例选择
 
