--- a/data/blogs/28.md
+++ b/data/blogs/28.md
@@ -44,7 +44,7 @@ xvda    202:0    0  16G  0 disk
 
 ```
 
-⑥ 在此使用 lsblk 命名验证扩展结果 
+⑥ 在此使用 lsblk 命名验证扩展分区结果 
 
 ```
 [ec2-user ~]$ lsblk
@@ -54,7 +54,19 @@ xvda    202:0    0  16G  0 disk
 
 ```
 
-⑦ 使用 df -h 命令使用 df -h 命令验证文件系统的大小，扩展 ESB 完成。
+⑧ XFS 卷使用 xfs_growfs 扩展文件系统
+
+```
+[ec2-user ~]$ sudo xfs_growfs -d /
+```
+
+如果尚未安装 XFS 工具，可以按如下方式安装。
+
+```
+[ec2-user ~]$ sudo yum install xfsprogs
+```
+
+⑨ 使用 df -h 命令使用 df -h 命令验证文件系统的大小，扩展 ESB 完成。
 
 ```
 [ec2-user ~]$ df -hT
