--- a/data/blogs/32.md
+++ b/data/blogs/32.md
@@ -18,6 +18,8 @@ F1216 10:50:15.594342  9129 doris_main.cpp:199] fail to open StorageEngine, res=
 
 ## 解决办法
 
+**注：此解决办法不适用在docker中启动的BE**，docker 中启动的 BE 下面的方法不能解决，请另寻其他办法。
+
 修改 /etc/security/limits.conf, 加入
 
 ```
