--- a/front/data/blogs/33.md
+++ b/front/data/blogs/33.md
@@ -76,6 +76,12 @@ curl: (7) Failed to connect to 172.31.***.** port 8040: Timed out
 
 我们本地测试只能直接连接 BE 的 8040测试，至于测试及生产环境导入实在 lambda 中完成，lambda 可以通过配置 VPC 访问 EC2 内网 IP，不存在访问不了的问题。
 
+## 其他问题
+
+1.be 日志大量出现：too many filtered rows
+
+原因：推送的数据列数不符合或数据格式不对。
+
 ## 参考链接
 
 <a href="http://18.237.177.172:8030/Playground/structure/information_schema" target="_blank" rel="nofollow">Doris文档</a>
