--- a/front/data/blogs/36.md
+++ b/front/data/blogs/36.md
@@ -18,9 +18,21 @@ Doris 常用 SQL 语句快速浏览，记录常用SQL，方便阅读查询。
 
 1.建库
 
+```
+CREATE DATABASE db_name;
+```
+
 2.选中库
 
+```
+USE db_name;
+```
+
 3.删除库
+
+```
+DROP DATABASE db_name
+```
 
 ## 表操作
 
@@ -28,9 +40,43 @@ Doris 常用 SQL 语句快速浏览，记录常用SQL，方便阅读查询。
 
 2.删除表
 
+3.替换表
+
+```
+ALTER TABLE table_1 REPLACE WITH TABLE table_2 PROPERTIES('swap' = 'false');
+```
+
+4.查看partition
+
+```
+SHOW PARTITIONS FROM Didabu.log_event;
+```
+
+5.增加列
+
+```
+ALTER TABLE db_name.table_name ADD COLUMN column_name bigint(20) default "0";
+```
+
+6.删除列
+
+```
+ALTER TABLE db_name.table_name DROP COLUMN column_name;
+```
+
+7.查看表结构及rolluop、物化视图
+
+```
+desc Didabu.test all
+```
+
 ## Rollup
 
 1.创建
+
+```
+ALTER TABLE db_name.table_name ADD ROLLUP rollup_name(field_1,field_2,...);
+```
 
 2.删除
 
@@ -40,16 +86,43 @@ Doris 常用 SQL 语句快速浏览，记录常用SQL，方便阅读查询。
 
 1.创建
 
+```
+CREATE MATERIALIZED VIEW mv_name AS SELECT field_1, sum(field_2) FROM table_name GROUP BY field_1;
+```
+
 2.删除
 
+```
+DROP MATERIALIZED VIEW mv_name ON db_name.table_name;
+```
+
 3.查看
+
+```
+SHOW ALTER TABLE MATERIALIZED VIEW FROM db_name;
+```
 
 ## be 相关操作
 
 1.添加 be
 
+```
+ALTER SYSTEM ADD BACKEND "172.31.43.204:9050";
+```
+
 2.删除 be
 
+强制删除
+```
+ALTER SYSTEM DROPP BACKEND "172.31.43.204:9050";
+```
+
+软删除
+
 3.查看 be
+
+```
+SHOW backends;
+```
 
 ## 其他操作
