--- a/front/data/blogs/36.md
+++ b/front/data/blogs/36.md
@@ -1,18 +1,33 @@
 # Doris 用户操作语句速览
 
-Doris 常用 SQL 语句快速浏览，记录常用SQL，方便阅读查询。
+Doris 常用 SQL 语句快速浏览，记录常用SQL，方便阅读查询，命令记录还不完整，后续会持续更新。
+
+关于各命令的详细参数参考<a href="https://doris.apache.org/master/zh-CN/installing/compilation.html" target="_blank" ref="nofollow">官网</a>.
 
 ## 连接 Fe
+
+使用mysql client
+
+```
+mysql -h FE_HOST -P9030 -uroot
+```
 
 ## 用户操作
 
 1.创建用户
+```
+CREATE USER 'test' IDENTIFIED BY 'test_passwd';
+```
 
 2.删除用户
 
 3.用户授权
 
 4.修改用户密码
+
+```
+SET PASSWORD FOR 'root' = PASSWORD('your_password');
+```
 
 ## 库操作
 
@@ -34,9 +49,36 @@ USE db_name;
 DROP DATABASE db_name
 ```
 
+4.查看库
+
+```
+SHOW DATABASES;
+```
+
 ## 表操作
 
 1.建表
+
+```
+CREATE TABLE table2
+(
+    event_day DATE,
+    siteid INT DEFAULT '10',
+    citycode SMALLINT,
+    username VARCHAR(32) DEFAULT '',
+    pv BIGINT SUM DEFAULT '0'
+)
+AGGREGATE KEY(event_day, siteid, citycode, username)
+PARTITION BY RANGE(event_day)
+(
+    PARTITION p201706 VALUES LESS THAN ('2017-07-01'),
+    PARTITION p201707 VALUES LESS THAN ('2017-08-01'),
+    PARTITION p201708 VALUES LESS THAN ('2017-09-01')
+)
+DISTRIBUTED BY HASH(siteid) BUCKETS 10
+PROPERTIES("replication_num" = "1");
+
+```
 
 2.删除表
 
