--- a/front/data/blogs/36.md
+++ b/front/data/blogs/36.md
@@ -23,6 +23,9 @@ CREATE USER 'test' IDENTIFIED BY 'test_passwd';
 
 3.用户授权
 
+```
+GRANT ALL ON database TO user;
+```
 4.修改用户密码
 
 ```
@@ -82,6 +85,10 @@ PROPERTIES("replication_num" = "1");
 
 2.删除表
 
+```
+DROP TABLE table_name;
+```
+
 3.替换表
 
 ```
@@ -124,6 +131,10 @@ ALTER TABLE db_name.table_name ADD ROLLUP rollup_name(field_1,field_2,...);
 
 3.查看
 
+```
+SHOW ALTER TABLE ROLLUP FROM db_name;
+```
+
 ## 物化视图
 
 1.创建
@@ -158,8 +169,6 @@ ALTER SYSTEM ADD BACKEND "172.31.43.204:9050";
 ```
 ALTER SYSTEM DROPP BACKEND "172.31.43.204:9050";
 ```
-
-软删除
 
 3.查看 be
 
