--- a/front/data/blogs/36.md
+++ b/front/data/blogs/36.md
@@ -58,6 +58,14 @@ DROP DATABASE db_name
 SHOW DATABASES;
 ```
 
+## 数据操作
+
+1.删除数据
+
+```
+DELETE FROM table PARTITION partition WHERE culumn_name = "test"
+```
+
 ## 表操作
 
 1.建表
