--- a/front/data/blogs/1.md
+++ b/front/data/blogs/1.md
@@ -1,68 +1,66 @@
-# 登录状态之cookies、session、token
-## 背景
+# Login status -- cookies、 session、 token
+## backgroud
 
-我们都知道 http 是无状态的，这也就意味着请求方和响应方之间无法维护状态，都是一次性的，他不知道请求前都发生过什么。但在有的应用场景下我们需要维护状态，比如各种后台管理系统都需要登录才能进行各种操作，这时我们就需要维护用户的登录状态。
+We all know that http is stateless, which means that the state cannot be maintained between the requester and the responder, it is all one-time, and he does not know what happened before the request. However, in some application scenarios, we need to maintain the status. For example, various background management systems need to log in to perform various operations. At this time, we need to maintain the user's login status.
 
-常见的登录方案有：
+Common login schemes are:
 
 1.cookies+session
 
 2.json web token(JWT)
 
-## cookie 以及 session
+## cookie and session
 
-cookie 是前端存储的一种，但相比于 localStorage 等其他方式，借助 HTTP 头、浏览器能力，cookie 可以做到前端无感知。
+Cookies are a type of front-end storage, but compared to other methods such as localStorage, with the help of HTTP headers and browser capabilities, cookies can be front-end unaware。
 
-一般过程是这样的：
+The general process is like this：
 
-- 在提供标记的接口，通过 HTTP 返回头的 Set-Cookie 字段，直接「种」到浏览器上。
-- 浏览器发起请求时，会自动把 cookie 通过 HTTP 请求头的 Cookie 字段，带给接口。
-- 服务器以及 Cookie 中的 SessionId 字段查询当前请求所属用户的用户 session 数据。
+- In the interface that provides the markup, directly "seed" to the browser through the Set-Cookie field of the HTTP return header。
+- When the browser initiates a request, it will automatically bring the cookie to the interface through the Cookie field of the HTTP request header。
+- The server and the SessionId field in the cookie query the user session data of the user to which the current request belongs。
 
-### cookie 配置
+### cookie config
 
 - **Domain / Path**
-  Domain 属性指定浏览器发出 HTTP 请求时，哪些域名要附带这个 Cookie。如果没有指定该属性，浏览器会默认将其设为当前 URL 的一级域名，比如 http://www.example.com 会设为 http://example.com，而且以后如果访问http://example.com的任何子域名，HTTP 请求也会带上这个 Cookie。如果服务器在 Set-Cookie 字段指定的域名，不属于当前域名，浏览器会拒绝这个 Cookie。
-  Path 属性指定浏览器发出 HTTP 请求时，哪些路径要附带这个 Cookie。只要浏览器发现，Path 属性是 HTTP 请求路径的开头一部分，就会在头信息里面带上这个 Cookie。比如，PATH 属性是/，那么请求/docs 路径也会包含该 Cookie。当然，前提是域名必须一致。
+  The Domain attribute specifies which domains should be attached with this cookie when the browser makes an HTTP request. If this attribute is not specified, the browser will set it as the first-level domain name of the current URL by default. For example, http://www.example.com will be set to http://example.com, and if you visit http:// Any subdomain of example.com, HTTP requests will also carry this cookie. If the domain name specified by the server in the Set-Cookie field does not belong to the current domain name, the browser will reject the cookie.
+  The Path attribute specifies which paths to attach this cookie to when the browser makes an HTTP request. As long as the browser finds that the Path attribute is the first part of the HTTP request path, it will include this cookie in the header information. For example, if the PATH attribute is /, then the request /docs path will also include the cookie. Of course, the premise is that the domain name must be consistent。
+
 - **Expires / Max-Age**
-  Expires 属性指定一个具体的到期时间，到了指定时间以后，浏览器就不再保留这个 Cookie。它的值是 UTC 格式。如果不设置该属性，或者设为 null，Cookie 只在当前会话（session）有效，浏览器窗口一旦关闭，当前 Session 结束，该 Cookie 就会被删除。另外，浏览器根据本地时间，决定 Cookie 是否过期，由于本地时间是不精确的，所以没有办法保证 Cookie 一定会在服务器指定的时间过期。
-  Max-Age 属性指定从现在开始 Cookie 存在的秒数，比如 60 _ 60 _ 24 \* 365（即一年）。过了这个时间以后，浏览器就不再保留这个 Cookie。
-  如果同时指定了 Expires 和 Max-Age，那么 Max-Age 的值将优先生效。
-  如果 Set-Cookie 字段没有指定 Expires 或 Max-Age 属性，那么这个 Cookie 就是 Session Cookie，即它只在本次对话存在，一旦用户关闭浏览器，浏览器就不会再保留这个 Cookie。
+  The Expires attribute specifies a specific expiration time. After the specified time, the browser will no longer retain the cookie. Its value is in UTC format. If this property is not set, or set to null, the cookie is only valid in the current session. Once the browser window is closed and the current session ends, the cookie will be deleted. In addition, the browser determines whether the cookie expires according to the local time. Since the local time is imprecise, there is no way to guarantee that the cookie will expire at the time specified by the server.
+  The Max-Age property specifies the number of seconds the cookie will exist from now on, such as 60 _ 60 _ 24 \* 365 (that is, one year). After this time, the browser will no longer keep this cookie.
+  If both Expires and Max-Age are specified, the value of Max-Age will take precedence.
+  If the Set-Cookie field does not specify the Expires or Max-Age attribute, then this cookie is a session cookie, that is, it only exists in this session. Once the user closes the browser, the browser will no longer retain this cookie。
+
 - **Secure / HttpOnly**
-  Secure 属性指定浏览器只有在加密协议 HTTPS 下，才能将这个 Cookie 发送到服务器。另一方面，如果当前协议是 HTTP，浏览器会自动忽略服务器发来的 Secure 属性。该属性只是一个开关，不需要指定值。如果通信是 HTTPS 协议，该开关自动打开。
-  HttpOnly 属性指定该 Cookie 无法通过 JavaScript 脚本拿到，主要是 Document.cookie 属性、XMLHttpRequest 对象和 Request API 都拿不到该属性。这样就防止了该 Cookie 被脚本读到，只有浏览器发出 HTTP 请求时，才会带上该 Cookie。
+  The Secure attribute specifies that the browser can only send this cookie to the server under the encrypted protocol HTTPS. On the other hand, if the current protocol is HTTP, the browser will automatically ignore the Secure attribute sent by the server. This property is just a switch, no value needs to be specified. This switch is automatically turned on if the communication is HTTPS protocol.
+  The HttpOnly attribute specifies that the cookie cannot be obtained through JavaScript scripts, mainly because the Document.cookie attribute, XMLHttpRequest object and Request API cannot obtain this attribute. This prevents the cookie from being read by the script, and the cookie is only included when the browser makes an HTTP request。
 
-### 服务端 session
+### server session
 
-session 本意是指客户端与服务器的会话状态，由于凭证存储到了服务端，后来也把这些存在服务端的信息称为 session。
-现在服务器自己维护登录状态，仅发给客户端一个 key，然后在自己维护一个 key-value 表，如果请求中有 key，并且在表中可以找到对应的 value，则视为合法。
+Session originally refers to the session state between the client and the server. Since the credentials are stored on the server, the information stored on the server is later called session.
+Now the server maintains the login state by itself, only sends a key to the client, and then maintains a key-value table in itself. If there is a key in the request and the corresponding value can be found in the table, it is considered legal。
 
-### 问题
+### Questions
 
-#### 1.集群服务器 session 同步
+#### 1.Cluster server session synchronization
 
-可以将 session 抽离出来统一管理，如使用 Redis 等服务。
+The session can be extracted for unified management, such as using Redis services
 
-#### 2.无法避免 CSRF 攻击
+#### 2.There is no way to avoid CSRF attacks
 
-由于 SessionId 存放在 Cookie 中，所以无法避免 [CSRF]: https://www.cnblogs.com/imgss/p/csrf.html 攻击。
+#### 3.Cookies for cross-domain requests
 
-#### 3.跨域请求的 cookie
+#### 4.cookie sharing
 
-[https://www.cnblogs.com/imgss/p/cors.html](https://www.cnblogs.com/imgss/p/cors.html)
-
-#### 4.cookie 共享
-
-同一域名下的 cookie 共享。
+Cookie sharing under the same domain name.
 
 ## jWT
 
-使用 JWT 维护登陆态，服务器不再需要维护状态表，他仅给客户端发送一个加密的数据 token，每次请求都带上这个加密的数据，再解密验证是否合法即可。由于是加密的数据，即使用户可以修改，命中几率也很小。
+Using JWT to maintain the login state, the server no longer needs to maintain the state table. It only sends an encrypted data token to the client, and each request brings this encrypted data, and then decrypts it to verify whether it is legal. Since it is encrypted data, even if the user can modify it, the chance of hit is very small.
 
-### node 中 JWT 的简单应用
+### Simple example of JWT in node
 
-第一步，在你的/login 路由中使用 jsonwebtoken 中间件用于生成 token：
+As a first step, use the jsonwebtoken middleware in your /login route to generate tokens：
 
 ```
 const jwt = require('jsonwebtoken')
@@ -74,8 +72,7 @@ let token = jwt.sign({
 res.cookie('token', token)
 ```
 
-复制代码具体使用方法请查看 jsonwebtoken 的 Github
-第二步，在 Node 的入口文件 app.js 中注册 express-jwt 中间件用于验证 token：
+The second step is to register the express-jwt middleware in Node's entry file app.js to verify the token:
 
 ```
 const expressJwt = require('express-jwt')
@@ -90,16 +87,15 @@ app.use(expressJwt({
   ]
 }))
 ```
-
-复制代码如果 getToken 返回 null，中间件会抛出 UnauthorizedError 异常：
+If getToken returns null, the middleware will throw an UnauthorizedError exception:
 
 ```
 app.use(function (err, req, res, next) {
-//当 token 验证失败时会抛出如下错误
+//When the token verification fails, the following error will be thrown
 if (err.name === 'UnauthorizedError') {
       res.status(401).json({
       status: 'fail',
-      message: '身份校验过期，请重新登陆'
+      message: 'Identity verification expired, please log in again'
     });
   }
 });
