--- a/front/data/blogs/4.md
+++ b/front/data/blogs/4.md
@@ -1,50 +1,109 @@
-# React 团队开源新的性能分析工具 - Scheduling Profiler !
+# umi practice question set # React team open source a new performance analysis tool - Scheduling Profiler !
 
-最近，React 团队开源了一款新的性能分析工具 —— Scheduling Profiler
+Recently, the React team open sourced a new performance analysis tool -- Scheduling Profiler
 
-![avatar](/static/images/schedulingProfiler.jpg)
+! [avatar](/static/images/schedulingProfiler.jpg)
 
-React 之前的 Profiler 主要是分析渲染时组件的性能。它并不能告诉我们 React 正在做什么（实际的协作调度位）。随着 React Scheduler 的逐渐强大，它已经不能满足我们的分析需求了，新的 Profiler 可以显示组件何时安排状态更新以及 React 何时处理它们。它还可以展示 React 如何对其工作的内容进行分类和优先级调度。
+React's previous Profiler mainly analyzed the performance of components while rendering. It didn't tell us what React was doing (the actual collaborative scheduling bit). As the React Scheduler has grown more powerful, it no longer meets our analysis needs, and the new Profiler can show when components schedule state updates and when React processes them. It can also show how React categorizes and prioritizes the content it works on.
 
-比如，下面是一个仅使用旧（同步）ReactDOM.renderAPI 的简单程序。分析器显示这个应用程序安排和渲染的所有工作都以同步优先级完成：
+For example, here is a simple application that uses only the old (synchronized) ReactDOM.renderAPI. The parser shows that all the work scheduled and rendered by this application is done with synchronous priority.
 
-它使用新的 createRoot API 以默认优先级呈现，然后同步更新以响应一个 输入 事件来管理一个 受控组件:
+It uses the new createRoot API to render at the default priority, and then synchronously updates to respond to an input event to manage a controlled component:
 
-这是显示空闲应用程序（没有运行 JavaScript）的配置文件的一部分。在这种情况下，React 会为 offscreen（当前未显示）的组件做一些预渲染工作。
+This is part of the profile that shows the idle application (no JavaScript running). In this case, React does some pre-rendering for the offscreen (not currently displayed) component.
 
-**offscreen 是 React 18还未发布的新 API**
+**offscreen is a new API not yet released for React 18**
 
-## transitions 是如何工作的
+## How transitions work
 
-startTransition 是 React 18 新增加的一个 API，它可以让你区分 非紧急 的状态更新。所有在 startTransition 回调中的更新都会被认为是 非紧急处理，如果出现更紧急的更新（比如用户又输入了新的值），则上面的更新都会被中断，直到没有其他紧急操作之后才会去继续执行更新。
+startTransition is a new API added to React 18 that allows you to distinguish between non-urgent state updates. All updates in the startTransition callback are considered non-urgent, and if there is a more urgent update (such as the user entering a new value), the above update is interrupted until there are no other urgent actions before continuing.
 
-下面是一个使用 startTransition API 的示例：React 会先渲染一个小的更新，向用户显示一些视觉反馈（ 比如 Loading 状态）
+Here's an example using the startTransition API: React renders a small update first, showing the user some visual feedback (e.g. Loading state)
 
-![avatar](/static/images/1.jpg)
+! [avatar](/static/images/1.jpg)
 
-## Suspense 如何影响渲染性能？
+How does ## Suspense affect rendering performance?
 
-React 团队预计在 React 18.0 之后的某个时候会发布对通过 Suspense 获取数据的全面支持，但你现在可以使用 Suspense 来处理延迟加载 React 组件之类的事情。新的分析器显示组件在渲染期间暂停的时间以及这如何影响整体渲染性能。
+The React team expects to release full support for fetching data via Suspense sometime after React 18.0, but you can now use Suspense to handle things like delayed loading of React components. The new parser shows how long components are paused during rendering and how this affects overall rendering performance.
 
-比如下面的例子，它使用 React.lazy 加载组建. 当这个组件正在加载时，React 会显示一个占位符。一旦组件完成加载，React 会重试渲染并提交最终的 UI。
+For example, here's an example that uses React.lazy to load a component. While this component is loading, React displays a placeholder. Once the component finishes loading, React will retry rendering and commit the final UI.
 
-![avatar](/static/images/3.jpg)
+! [avatar](/static/images/3.jpg)
 
-## 还有什么可能导致渲染延迟？
+## What else might cause rendering delays?
 
-Suspense 可能导致渲染延迟，因为 React 等待数据加载，但 React 也可能因为等待大量 JavaScript 运行卡住。
+Suspense can cause rendering delays as React waits for data to load, but React can also get stuck waiting for a lot of JavaScript to run.
 
-React 分析工具以前只专注于分析 React（或 React 组件）正在做什么，但浏览器运行的任何 JavaScript 都会影响性能。新的分析器也显示了非 React JavaScript，因此很容易看到它何时延迟了 React 的渲染。
+The React parser tool used to focus only on analyzing what React (or a React component) was doing, but any JavaScript the browser is running can affect performance. The new parser also shows non-React JavaScript, so it's easy to see when it's delaying the rendering of React.
 
-![avatar](/static/images/2.jpg)
+! [avatar](/static/images/2.jpg)
 
-## 提升性能的提示
+## Tips for improving performance
 
-旧版的分析器只是专注于做一些分析，但是新版的工具可以给出我们一些优化建议：
+The old parser just focused on doing some analysis, but the new version of the tool can give us some optimization tips: !
 
-![avatar](/static/images/5.jpg)
+! [avatar](/static/images/5.jpg)
 
-另外新的分析器还会对事件处理程序中安排长时间的同步 React 更新进行警告：
+Also the new parser warns about scheduling long synchronous React updates in event handlers: !
 
 
-![avatar](/static/images/4.jpg)
+! [avatar](/static/images/4.jpg)
+
+Development Environment.
+umi: 3.5.18
+node: v14.15.1
+System: windows
+
+This article mainly records some scenario-specific issues during the project practice, for reference only: ## 1.
+
+## 1. webpackChain custom loader error: this.getOptions is not a function
+
+** Scenario:**
+    Add loader to parse makdown file to html display, use webpackChain to add remark-loader,html-loader to report error.
+```
+export default {
+    ...
+    chainWebpack(config){
+        config.module
+        .rule('compile-md')
+        .test(/\.md$/)
+            .use("html-loader")
+            .loader("html-loader")
+            .end()
+            .use("markdown-loader")
+    }
+    ...
+}
+  
+```
+**Solution:**
+    Just close the webpack5 editor and modify the umi configuration config.js or .umirc.js to.
+```
+export default {
+    ...
+    webpack5:false,
+    ...
+}
+```
+
+## 2. mfsu, @umijs/preset-ui(block) are not supported under SSR(server-side rendering)
+
+## 3. SSR (server-side rendering) after the first request, click on the navigation menu, the route switch occurs to jump to a new page did not launch a request to the server to get a new page, but a locally done page re-rendering.
+**Solution:**
+Replace the NavLink component with a tag
+
+## 4. SSR (Server Side Rendering) requests server Css and js files and returns html content.
+**Solution:**
+If you configure hash:true, turn off the hash function of the packaged file, because umi.server.js does not add hash to the reference address of js and css, for example, your packaged file name is umi.adsjsnd.css, but the reference file name of umi.server.js to css is umi.css, Modify the configuration config.js or .umirc.js to
+```
+export default {
+    ...
+    hash:false
+    ...
+}
+```
+ If hash:true is not configured, refer to this issues:https://github.com/umijs/umi/issues/4808
+
+ ## 5. Enable mfsu:{} error: 1. Can't read property 'ModuleFederationPlugin' of undefined.
+ **Solution:**
+ Please make sure mfsu:{} is added to config.ts instead of config.dev.ts or config.prod.ts.
