--- a/front/data/solution/1.md
+++ b/front/data/solution/1.md
@@ -2,20 +2,18 @@
 
 ## 什么是灰度发布
 
-将某个功能灰度发布（逐渐放量）给特定线上人群，避免新功能全量上线带来的风险
+将新功能灰度发布（逐步放量）给特定线上人群，避免新功能全量上线出现未知的 BUG 带来的风险。
 
-上白话文，某项目当前处于1.0版本，但是想更新一个1.1版本，1.1版本内测没有问题了，但是由于改动了关键的功能，想要实现只给一部分线上用户使用体验，看看反馈。
+通俗的说就是，项目处于1.0.0版本，我们想要更新到 1.0.0 版本，1.1.0版本的内测是没有没有问题了，但是由于改动了关键的功能或者想试试新功能的反响如何，我们想要只给一部分线上用户使用体验，等用户反馈。
 
-这个时候线上就需要一部分用户继续用1.0版本，一部分用1.1的版本，如果1.1版本接收到反馈的问题严重到影响上线了，那么就回退1.0版本，影响的用户范围比较小，如果1.1版本稳定，那就直接给所有用户过度到1.1版本。实现这种场景效果，就是灰度发布。
+这个时候线上就需要一部分用户使用 1.0.0 版本的系统，一部分用 1.1.0 版本的系统，假如 1.1.0 版本出现问题或者用户反馈极差，我们就回退到 1.0.0 版本，影响的用户范围比较小，如果 1.1.1 版本没问题，那就直接全量发布，让所有用户都使用 1.1.0 版本。实现这种功能，就是灰度发布了。
 
-## 什么是灰度规则？
+## 灰度规则
 
-灰度规则可以是用户等级、性别、地区、客户端等业务信息或者设备信息，比如灰度规则设定为广东地区的用户访问1.1版本，那么广东用户访问项目的时候就算命中了灰度规则，给他们转去1.1版本，其他地区的用户继续使用1.0版本
+灰度规则可以是用户等级、性别、地区、客户端等业务信息或者设备信息，比如灰度规则设定为广东地区的用户访问 1.1.0 版本，那么广东用户访问项目的时候就算命中了灰度规则，给他们转去 1.1.1 版本，其他地区的用户继续使用 1.0.0 版本
 
-**tips**
-关于灰度规则的一些放量算法也比较容易找到，这篇文章重点不是讲算法，只是更多贴合实际场景把灰度方案落地，对于放量算法有高要求的伙伴可以自行搜一下放量算法相关，桶漏、令牌算法等
-
-
+**注意**
+关于灰度规则的一些放量算法也比较容易找到，这篇文章重点不是讲算法，只是更多贴合实际场景把灰度方案落地，对于放量算法有高要求的伙伴可以自行搜一下放量算法相关，桶漏、令牌算法等。
 
 ## 常见灰度发布方案
 灰度方案各式各样，既有多样就有对比，没有最好，只有最合适自己的业务场景，这里给大家介绍几种方案，以便大家做比较选择
@@ -34,7 +32,8 @@
 只能简单依赖nginx加权轮询百分比来控制流量，全靠前端，无法结合业务做分流
 可控性弱，在灰度版本出现问题的时候，只能通过修改nginx配置来让用户回退版本
 问题收集能力差，只能等待用户反馈
-在客户端cookie被清理掉后，用户需要重新通过nginx的加权轮询进入，有可能被分配到与上一个分配不同的版本
+在客户端cookie被清理掉后，用户需要重新通过nginx的加权轮询进入，有可能被分配到与上一个分配不同的版本。
+
 ### 2. nginx + lua + redis（推荐指数：⭐️⭐️）
 tips：这套方案可能是没找到好的资料或者对这套方案理解得不够深刻，我们觉得灵活性有些欠缺，比较难结合复杂的业务做过多的灰度逻辑判断，如果有大佬用过这套方案的，求不吝赐教。
 
