内容修正，blogs补充

--- a/front/data/blogs/36.md
+++ b/front/data/blogs/36.md
@@ -100,8 +100,11 @@ DROP TABLE table_name;
 3.替换表
 
 ```
+// swap 为 false 会删除替换后的表，为 true 则保留两个表
 ALTER TABLE table_1 REPLACE WITH TABLE table_2 PROPERTIES('swap' = 'false');
 ```
+
+**说明：**替换表操作实际只是对两个表进行了表名的重名替换，即 A 表重命名为 B, B表重命名为 A。
 
 4.查看partition
 
@@ -145,6 +148,8 @@ SHOW ALTER TABLE ROLLUP FROM db_name;
 
 ## 物化视图
 
+**物化视图只能建立在 duplicate 模型上**
+
 1.创建
 
 ```
@@ -183,5 +188,25 @@ ALTER SYSTEM DROPP BACKEND "172.31.43.204:9050";
 ```
 SHOW backends;
 ```
+
+## 数据删除恢复
+
+DorisDB 支持对误删除的数据库/表/分区进行数据恢复，在 drop table 或者 drop database 之后，DorisDB 不会立刻对数据进行物理删除，而是在Trash中保留一段时间（默认1天），管理员可以通过RECOVER命令对误删除的数据进行恢复
+
+```
+
+-- 1) 恢复 database
+RECOVER DATABASE db_name;
+-- 2) 恢复 table
+RECOVER TABLE [db_name.]table_name;
+-- 3) 恢复 partition
+RECOVER PARTITION partition_name FROM [db_name.]table_name;
+
+```
+
+**说明**
+该操作仅能恢复之前一段时间内删除的元信息。默认为 1 天。（可通过fe.conf中catalog_trash_expire_second参数配置）
+
+如果删除元信息后新建立了同名同类型的元信息，则之前删除的元信息不能被恢复
 
 ## 其他操作
