--- a/front/data/softwares/5.md
+++ b/front/data/softwares/5.md
@@ -1,4 +1,4 @@
-# Apifox - API 文档、API 调试、API Mock、API 自动化测试
+# Apifox 教程 - API 文档、API 调试、API Mock、API 自动化测试
 
 今天被别人推荐了一款 API 工具 Apifox ，抱着试试看的心态下载下来看了一下，真香，果断卸载了 postman。
 
