--- a/data/blogs/55.md
+++ b/data/blogs/55.md
@@ -1,3 +1,5 @@
+# React 常见面试问题附答案，持续更新中
+
  本文主要记录日常面试中遇到的问题及其参考答案，如有表述有误的地方欢迎大家指出，共同进步！
  
  ## 技术问题
@@ -42,10 +44,33 @@ StrictMode目前有助于：
  - 检测意外的副作用 
  - 检测遗留 context AP
 
- **9. class组件声明周期函数有哪些？分别有什么作用？**
+ **9. class组件声明周期函数有哪些？**
+ 
+挂载：当组件实例被创建并插入 DOM 中时，其生命周期调用顺序如下：
 
- **10.React 中高阶函数和自定义 Hook 的优缺点？**
+ - constructor() 
+ - static getDerivedStateFromProps() 
+ - render()
+ - componentDidMount()
+ 
+ 更新：当组件的 props 或 state 发生变化时会触发更新。组件更新的生命周期调用顺序如下：
+ - static getDerivedStateFromProps() 
+ - shouldComponentUpdate() 
+ - render()
+ - getSnapshotBeforeUpdate() 
+ - componentDidUpdate()
 
+卸载：当组件从 DOM 中移除时会调用如下方法：
+- componentWillUnmount()
+
+错误处理：当渲染过程，生命周期，或子组件的构造函数中抛出错误时，会调用如下方法：
+
+ - static getDerivedStateFromError()
+ - componentDidCatch()
+
+
+ **10.React Hooks 的优缺点？**
+ - 相比render props 和高阶组件，更容易复用组件状态逻辑
 
  ### 进阶
  **1. 遍历数组循环生成节点时需要给节点设置key属性，这个key有什么作用？**
